# docs

./: .gitignore  .gitmodules  .markdownlint.yaml  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yaml
.gitverse/workflows/:  mkdocs.yaml  mkdocs.yaml  pages.yaml  simple-workflow.yaml
docs/: index.md
docs/about/: contacts.md  index.md  issues.md
docs/assets/: abbreviations.csv  abbreviations.md  extra.css  images.md  links.md
docs/glossary/: abbreviations.md  glossary.md  index.md
nix/: defaults.nix  shell.nix  systems.nix
