[project]
name = "ebudget-community-docs"
version = "0.1.0"
description = "Documentation project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.7.3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-table-reader-plugin>=3.1.0",
    "pymdown-extensions>=10.21",
]
